a kargennél akt értékekk adva, AME MME kell még!

--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -163,7 +163,7 @@
                     </td>
                     <td style="width: 3%;">
                         <div id="divek">
-                            <output type="number" id="gyorsasag"></output>
+                            <output type="number" id="gyorsasag">0</output>
                         </div>
                     </td>
 
@@ -204,7 +204,7 @@
                     </td>
                     <td style="width: 3%;">
                         <div id="divek">
-                            <output type="number" id="ugyesseg"></output>
+                            <output type="number" id="ugyesseg">0</output>
                         </div>
                     </td>
 
@@ -246,7 +246,7 @@
                     </td>
                     <td style="width: 3%;">
                         <div id="divek">
-                            <output type="number" id="allokepesseg"></output>
+                            <output type="number" id="allokepesseg">0</output>
                         </div>
                     </td>
 
@@ -288,7 +288,7 @@
                     </td>
                     <td style="width: 3%;">
                         <div id="divek">
-                            <output type="number" id="egeszseg"></output>
+                            <output type="number" id="egeszseg">0</output>
                         </div>
                     </td>
 
@@ -325,7 +325,7 @@
                     </td>
                     <td style="width: 3%;">
                         <div id="divek">
-                            <output type="number" id="szepseg"></output>
+                            <output type="number" id="szepseg">0</output>
                         </div>
                     </td>
                     <td style="width: 35%;">
@@ -335,6 +335,7 @@
                             <label for="">=</label>
                             <output id="fp" type="number"
                                 style="background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
+                                <label for="">Akt: </label> <input type="text" style="width: 30px;">
                         </div>
                     </td>
 
@@ -363,7 +364,7 @@
                     </td>
                     <td style="width: 3%;">
                         <div id="divek">
-                            <output type="number" id="intelligencia"></output>
+                            <output type="number" id="intelligencia">0</output>
                         </div>
                     </td>
                     <td style="width: 35%;">
@@ -373,6 +374,7 @@
                             <label for="">=</label>
                             <output id="mana" type="number"
                                 style="background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
+                                <label for="">Akt: </label> <input type="text" style="width: 30px;">
                         </div>
                     </td>
 
@@ -400,7 +402,7 @@
                     </td>
                     <td style="width: 3%;">
                         <div id="divek">
-                            <output type="number" id="akaratero"></output>
+                            <output type="number" id="akaratero">0</output>
                         </div>
                     </td>
                     <td style="width: 35%;">
@@ -410,6 +412,7 @@
                             <label for="">=</label>
                             <output id="pszi" type="number"
                                 style="background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
+                                <label for="">Akt: </label> <input type="text" style="width: 30px;">
                         </div>
                     </td>
 
@@ -437,7 +440,7 @@
                     </td>
                     <td style="width: 3%;">
                         <div id="divek">
-                            <output type="number" id="asztral"></output>
+                            <output type="number" id="asztral">0</output>
                         </div>
                     </td>
                     <td style="width: 35%;">
