--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -43,6 +43,7 @@
     </div>
 
     <button class="mapbutton" id="sirenar" onclick="sirenar()"></button>
+    <button class="mapbutton" id="riegoy" onclick="riegoy()"></button>
 
     <img src="htmlmedia/ynev_poszter_lowres.jpg" alt="">
 </body>
