--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -41,6 +41,8 @@
             </tr>
         </table>
     </div>
+    
+    <div id="textdiv"></div>
 
     <button class="mapbutton" id="sirenar" onclick="sirenar()"></button>
     <button class="mapbutton" id="riegoy" onclick="riegoy()"></button>
