--- a/mgussegdlet/app/src/main/assets/riegoy.html
+++ b/mgussegdlet/app/src/main/assets/riegoy.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<button onclick="location.href='vilag.html';" style="width: 100%; font-size: 14px; opacity: 0.7; padding: 8px; border-radius: 4px; border: 1px;">Világ</button>
+<button onclick="location.href='vilag.html';" style="width: 100%; font-size: 14px; opacity: 0.6; padding: 8px; border-radius: 4px; border: 1px;">Világ</button>
 
-<body style="text-align: justify; background-color: lightblue; margin-left: 12px; margin-right: 12px; background-image: url('htmlmedia/vilagback.jpg'); background-repeat: no-repeat; background-size: 270%; overflow:scroll; background-attachment: fixed; backdrop-filter: blur(5px); padding: 1px;">
+<body style="text-align: justify; color: white; background-color: lightblue; margin-left: 12px; margin-right: 12px; background-image: url('htmlmedia/backback.jpg'); background-repeat: no-repeat; background-size: 320%; overflow:scroll; background-attachment: fixed; backdrop-filter: blur(2px); padding: 1px;">
 <h1 style="background-color: grey; text-align: center; border-radius: 4px;">Riegoy városállamok</h1>
 Még Északfölde népeinek körében sem igazán ismert ez a mindentől távol fekvő, ám aprónak éppenséggel nem nevezhető államszövetség. Talán éppen csekély politikai hatalma és gazdasági ereje miatt van ez így, ám tény, hogy az északi félteke ügyeinek befolyására valóban kevés kihatással vannak az itteni események. Mindez mégsem jelenti azt, hogy Ynev ezen távoli részében szorgos semmittevéssel múlatnák az időt, mint ahogy az sem, hogy az itteni törpeállamok semmiféle érdeklődésre nem tarthatnak számot.
 Komoly történelmi múlttal és hagyományokkal rendelkeznek, s azt sem lehet mondani, hogy minden érdekességet	nélkülöznek	a végeérhetetlen tengerpart eseményei. Speciális fekvésének köszönhetően számos faj egyedeit megtaláljuk itt, s az sem mellékes, hogy az emberi faj különböző isteneit is más formában imádják ezen a vidéken, mint másutt. <br><br>
