--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -46,6 +46,7 @@
 
     <button class="mapbutton" id="sirenar" onclick="sirenar()"></button>
     <button class="mapbutton" id="riegoy" onclick="riegoy()"></button>
+    <button class="mapbutton" id="tarin" onclick="tarin()"></button>
 
     <img src="htmlmedia/ynev_poszter_lowres.jpg" alt="">
 </body>
