néhány dolog javítva

--- a/mgussegdlet/app/src/main/assets/index.html
+++ b/mgussegdlet/app/src/main/assets/index.html
@@ -9,7 +9,7 @@
     <title>Mágus</title>
 </head>
 
-<body>
+<body id="kargenbody">
     <div class="circle"></div>
     <table id="table1" width="100%">
         
@@ -299,6 +299,7 @@
                             <label for="">=</label>
                             <output id="ep" type="number"
                                 style="background-color: cyan; padding: 3px; border-radius: 5px; font-size: 14px;"></output>
+                                <label for="">Akt: </label> <input type="text" style="width: 30px;">
                         </div>
                     </td>
                 </tr>
@@ -1223,7 +1224,7 @@
                         <option value="">Zárnyitás</option>
                         <option value="">Titkosajtó keresés</option>
 
-                    </select><label for="">Szint:</label> <output type="number" id="szint" style="padding: 4px; background-color:blanchedalmond; font-size: 14px;">1</output> <button onclick="szintplus()" style="border-width: 1px; border-radius: 3px;">+</button>
+                    </select><label for="">Szint:</label> <output type="number" id="szint" style="padding: 4px; background-color:blanchedalmond; font-size: 14px; border-radius: 4px;">1</output> <button onclick="szintplus()" style="border-width: 1px; border-radius: 3px;">+</button>
                 </td>
             </tr>
 
