térképen ugorjon a pontra nem megyen

--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -39,6 +39,18 @@
                     <button class="buttons" id="egyebbutton" onclick="location.href='egyeb.html';">Egyéb</button>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <select name="" id="orszagselector" class="buttons" onchange="goorszag()" style="text-align: center; background-color: white;">
+                        <option value="valassz">Válassz</option>
+                        <option value="doran">Doran</option>
+                        <option value="riegoy">Riegoy Városállamok</option>
+                        <option value="tarin">Tarin</option>
+
+
+                    </select>
+                </td>
+            </tr>
         </table>
     </div>
     
