--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -46,6 +46,7 @@
                         <option value="doran">Doran</option>
                         <option value="riegoy">Riegoy Városállamok</option>
                         <option value="tarin">Tarin</option>
+                        <option value="gianag">Gianag</option>
 
 
                     </select>
@@ -60,6 +61,7 @@
     <button class="mapbutton" id="riegoy" onclick="riegoy()"></button>
     <button class="mapbutton" id="tarin" onclick="tarin()"></button>
     <button class="mapbutton" id="doran" onclick="doran()"></button>
+    <button class="mapbutton" id="gianag" onclick="gianag()"></button>
 
 
     <img src="htmlmedia/ynev_poszter_lowres.jpg" alt="">
