gianag fele kész

--- a/mgussegdlet/app/src/main/assets/gianag.html
+++ b/mgussegdlet/app/src/main/assets/gianag.html
@@ -21,7 +21,28 @@
         csak arra fecsérelve erejét, hogy magát védeni tudja - északon is mélyreható változások történtek. Egy nyugatról érkezett harcos dinasztia, az erv
         (ősi forrásokban irlav) törzsek egy megerősödött ága vette birtokába a Traidlan-medencét, s miután a környező népekkel elfogadtatták jelenlétüket
         (ha kellett tűzzel-vassal, ha lehetett, diplomáciai ravaszsággal), az erigowi hercegség szomszédságában, a Traidlan-hegység lábánál saját 
-        királyságot hoztak létre. 
+        királyságot hoztak létre. Királyaik a lassan megnyugvó északi vidékeken elismert uralkodók voltak, szomszédaikkal -elsősorban Erigowval - gyümölcsöző kapcsolatokat alakítottak ki. A királyság legnagyobb kiterjedését 
+        a Pyarron szerinti 8. században érte el. Ekkor az uralkodó egy ötödkori tekercs jövendöléseire hivatkozva három hercegségre osztotta az országot -
+        fiaira biztonságos határokat és a Káoszkor zűrzavarához képest rendezett belső viszonoykat, jószomszédi kapcsolatokat hagyott. 
+        A három hercegség, Eren, Haonwell és Gianag, melyeket Északi Hármak néven ismert ezentúl a világ, azóta is szoros szövetségben 
+        áll egymással. A mi szempontunkból legfontosabb hercegség, Gianag némiképp másként fejlődött, mint testvérei, s ennek egyik okaként egy Ynev szempontjából is fontos 
+        változást szoktak megemlíteni: a Pyarron szerinti 1200-as évek derekán a hercegség hasonló nevű fővárosában fogadták a nemrég 
+        partot ért beriqueli törpék prémbundás követeit. Az akkori vezetők nem követtek el súlyos diplomáciai hibákat, hozzájárultak, hogy a törpék letelepedjenek a Traidlan-hegységben, s azok hamarosan csatlakoztak az Északi Hármak 
+        és Erigow kezdeményezésére létrejött Szövetséghez. Jelenlétükből Gianag húzta a legtöbb hasznot. A törpékkel fenntartott híresen jó viszony a hercegségen belül szinte mindenütt megmutatkozik. 
+        Nemcsak a hercegi testőrség törpe tagjai és az építészet beriqueli stílusjegyei utalnak erre, de a vanir nyelv elterjedtsége, s a különböző szokásokban, a mondavilágban 
+        mutatkozó hasonlóságok is - az ilyen és ehhez hasonló vonásokat napestig sorolhatnánk. 
+        A jó katonai és gazdasági kapcsolatokkal rendelkező állam - erős kezű hercegeinek irányítása alatt - viszonylagos biztonságban él. Távol esik a különböző ütközőzónáktól, háború emberöltők óta nem dúlta területét. 
+        Ez nem jelenti azt, hogy lakói ne lennének jó kardforgatók, hiszen a magára valamit is adó nemesek mindegyike ért a fegyverhasználathoz, s a nép körében nagy megbecsülésnek örvendő alabárdosok is messze földön híresek. 
+        A külsőségekre nem sokat adó gianagiak a külhoniak szemében gyakorta igénytelennek tűnnek - a zor éghajlat és a lakosok puritán gondolkodása e különcségre is magyarázatot ad. 
+        Nem szembetűnő a különbség a nemesek és nemtelenek között, de a nekik kijáró tiszteletet mindig megkapják a családjuk hagyományaira büszke birtokosok. 
+        Az északi mondás -"Gianagban mindenki úr" - kétszeresen igaz. Egyfelől, mert a városokon kívül élő nemtelenek szabadon rendelkezhetnek saját földeik felett, még ha azokon nem is termény, hanem tűlevelű erdő zöldell, másfelől, mert hírhedetten büszke és udvarias még a legszegényebb gianagi is. 
+        A hegyek és a szűkös termőföldek nem kedveznek a mezőgazdaságnak, bár Gianag állattenyésztése híres, lakói a javak zömét a környező államoktól kénytelenek beszerezni, s háborús időkben bizony megérzik, ha a szomszédok éléskamrája ürülni kezd. Jobbára nyersanyagokkal kereskednek, de elég nagy keletje van kézművesek míves 
+        termékeinek és a hegyekből lehajtott, híresen szívós marhacsordáiknak is. A törpkkel való jó kapcsolatnak sehol annyi bizonyítékát nem találni, mint a főváros, Sinog Kul utcáin. 
+        Az uralkodói székhely égbenyúló hegyek között fekszikk, s hatalmas méreteire nem is következtethet az utazó, ha védművekkel megerősített falakhoz valamelyik évezredes kőútön közelít - a város legnagyobb része ugyanis a hegy mélyén húzódik. 
+        Ravasz csapdákkal védett kürtők biztosítják a sziklába vájt otthonok, őrhelyek szellőzését és fényellátását. Ahol ez nem vezethet eredményre, vagy nem akartak a felszínnel közvetlen kapcsolatot, ott mágiával oldották meg ugyanezt. 
+        A komor, négyszögű tornyok városa alatt rejtőzik egy olyan iskola, melynek létezéséről még a szövetségen belül is kevesen tudnak. Egy hatalmas, föld alatti tó partján éll az épületegyüttes, mely a gianagi vízvarázslók rendjét óvja. 
+        E különös mágiahasználók hártyavékony beszélő szolgákat éppúgy létre tudnak hozni az akaratuknak engedelmeskedő őselemből, mint pusztító áradatot, vagy a testre simuló, lágy vízbilincst. Hogy a városon belül mégis idegenkedve tekintenek rájuk, az annak is köszönhető, hogy külországiak is akadnak köztük. 
+        
 
 </body>
 </html>
