--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -47,6 +47,7 @@
                         <option value="riegoy">Riegoy Városállamok</option>
                         <option value="tarin">Tarin</option>
                         <option value="gianag">Gianag</option>
+                        <option value="haonwell">Haonwell</option>
 
 
                     </select>
@@ -62,6 +63,7 @@
     <button class="mapbutton" id="tarin" onclick="tarin()"></button>
     <button class="mapbutton" id="doran" onclick="doran()"></button>
     <button class="mapbutton" id="gianag" onclick="gianag()"></button>
+    <button class="mapbutton" id="haonwell" onclick="haonwell()"></button>
 
 
     <img src="htmlmedia/ynev_poszter_lowres.jpg" alt="">
