--- a/mgussegdlet/app/src/main/assets/gianag.html
+++ b/mgussegdlet/app/src/main/assets/gianag.html
@@ -42,6 +42,10 @@
         Ravasz csapdákkal védett kürtők biztosítják a sziklába vájt otthonok, őrhelyek szellőzését és fényellátását. Ahol ez nem vezethet eredményre, vagy nem akartak a felszínnel közvetlen kapcsolatot, ott mágiával oldották meg ugyanezt. 
         A komor, négyszögű tornyok városa alatt rejtőzik egy olyan iskola, melynek létezéséről még a szövetségen belül is kevesen tudnak. Egy hatalmas, föld alatti tó partján éll az épületegyüttes, mely a gianagi vízvarázslók rendjét óvja. 
         E különös mágiahasználók hártyavékony beszélő szolgákat éppúgy létre tudnak hozni az akaratuknak engedelmeskedő őselemből, mint pusztító áradatot, vagy a testre simuló, lágy vízbilincst. Hogy a városon belül mégis idegenkedve tekintenek rájuk, az annak is köszönhető, hogy külországiak is akadnak köztük. 
+        Kevesen vannak, s noha névleg a maguk urai, Gianag hercegének mindenben engedelmeskednek. A festői hercegség jókora területét borítják hegyi erdőségek. A helyi lakosok lenyűgözően egyszerű és praktikus tárgyak garmadáját képesek 
+        előállítani fából, a fogpiszkálótól kezdve a legnépszerűbb istenek, Arel, Kyel és Dreina égbenyúló fatemplomaiig, melyeket egyetlen vasszög beillesztése nélkül készítenek el. A legügyesebb fafaragók Gianag-szerte híresek, 
+        munkáikat az ország minden részében megbecsülés övezi. Korántsem ilyen ismertek, de legalább ilyen hasznos munkát végeznek azok a hegyi pásztorok, akik a marhákat terelik a magasan fekvő 
+        legelőkről a távoli vidékek piacaira. Fokosaik elől még a legbátrabbaknak is tanácsos kitérniük, roppant szarvakból készült kürtjeikkel akárha beszélnének, mérföldnyi távolságból képesek üzenni egymásnak. 
         
 
 </body>
