--- a/mgussegdlet/app/src/main/assets/haonwell.html
+++ b/mgussegdlet/app/src/main/assets/haonwell.html
@@ -12,6 +12,46 @@
         style="width: 100%; font-size: 14px; opacity: 0.6; padding: 8px; border-radius: 4px; border: 1px;">Világ</button>
         <h1 style="background-color: grey; text-align: center; border-radius: 4px;">Gianag</h1>
 
+    Az Északi Hármak legkisebbike, s ugyanaz a harcos erv dinasztia alapította, melyről fentebb már szóltunk. 
+    Történelmük tehát közös, de ezen kívül is sok szál fűzi össze a szövetségben álló hercegségeket.
+    Bár az uralkodócsaládok és számos más família között rokoni kapcsolat áll fenn, bármely állam lakója megsértődne, ha egy kalap alá próbálnák venni a másik két hercegségben élőkkel.
+    Nem mintha megvetéssel vagy lenézéssel kezelnék a szomszédokat, de igen önérzetes a kis birodalmak minden lakosa, és igen erős hazafias érzelmek fűtik őket. 
+    Jó ideje már, hogy különváltak, s a közös politika mellett mindőjük a saját útját járja. Az önálló lépések megtételében mindőjüket erősen behatárolta az a tény, hogy a történelem folyamán mely területek felett szereztek ellenőrzést. 
+    Haonwellt a messziről jövők csak egyetlen, ám jókora városként képzelik, s nem is tudják milyen messze járnak az igazságtól. Mert igaz ugyan, hogy Erigow után a Szövetség egyik legnagyobb városa, de távolról sem fedi a valóságot, hogy csupán ennyiből állna.
+    Széles mezők és legelők, zord erdők veszik körül a várost, s az Északi Hármak közül egyedül ők büszkélkedhetnek afféla gyarmattal, egy a Mer'Daray partján épült várossal, Ziaddal, melynek területét századokkal ezelőtt vették meg Tarin lakóitól. Maga Haonwell Erigowhoz hasonlóan egy kyr város helyén épült. 
+    Noha soha nem büszkélkedhetett Enrawellhez hasonló híres épületekkel, számos gyönyörű építmény maradt fenn, élte túl a történelem viharait vagy építették újjá. Talán éppen ez tette, hogy lakkói igen magasan hordják az orrukat, ha városuk szépségéről esik szó, s gyakorta hangoztatják, ha valaki kyr épületekre kíváncsi, inkább az ő városukat bámulja meg, mint az erigowiak pökhendi Belsővárosát.
+    Nem valószínű, hogy megnyugtatná őket, ha tudnák, hogy maga Toron is hasonlóan gondolkodik, s az új Kyria feltámasztásán szorgoskodó sötét hatalom hadműveleti terveiben mindig elsőrendű célként szerepelt a város épületeinek kímélése. 
+    Erigow esetében mindez csupán másodlagos szempont. 
+    A mai városkép kialakításához nagymértékben hozzájárult, hogy a Hármak két másik tagjával ellentétben Haonwellben nemhogy nem gyűlölik, hanem éppenséggel nagy becsben tartják az elfeket. 
+    Külön negyedeik vannak - a kalandozók városán kívül nincs is talán olyan hely Yneven, ahol ilyen sokan urbánus életet élnének, ámbátor a sötét Kránban élő elfajzott egyedekről nincsenek pontos adataink. 
+    A völgyben épült város ma már mindkét oldalon felhúzódott az emelkedőkre is, egyik oldalon az úgynevezett Kyr Palotáig, a másikon a hercegi várig. 
+    Három fal veszi körül a folyton terjeszkedő várost. Legutóbbi átépítését kétszéz esztendeje fejezték be, de mára a külső negyedek ismét túlterjedtek a védműveken, s a kereskedők, kézművesek, és naplopók szószólói a városi tanácsban egyre újabbak felhúzását sürgetik. 
+    A belső falak most már nem annyira a védelemre szolgálnak, mint inkább a különböző negyedek határaiként, de a kapukat éjszakára itt is rendre bezárják, s a kapuőrök szép pénzt keresnek az éji órákon városrészről városrészre járó útfiakon, vigadozókon. A legkülső fal hatalmas kapui ez alól kivételt jelentenek. 
+    Amíg nincs nap az égen, senki nem hagyjatja el a várost, s nem is nyerhet oda bebocsátást.
+    A város a hivatalos nyilvántartás számos kerületre osztja, de a kívülállók számára könnyebb, ha csak három részt különböztetnek meg: a Garaist, a nemesek negyedeit, Synn Eriant, az elf negyedeket, és Hanót a polgárok lakhelyét. 
+    E kis birodalomon Haonwell hercegi párja uralkodik. A család története nem mentes az intrikáktól, hisz a hatalom igézete még a legtisztább lelket is képes megbolondítani, ám a koronás fők sosem igyekeztek a hercegség sorsát saját érdekeinek alárendelni. A nemesség Haonwell legendás méneseinek köszönheti vagyonát. 
+    Maguk a családok büszke várvonalú erv nemesek, csatában bátor, híresen jó kardforgatók - nem volt még olyan Zászlóháború, melyből ne vették volna ki a részüket. 
+    A hősi tetteikről szóló dalok kedveltek mind a nemesi, mind a polgári körökben. 
+    A hatalmas város nem lehet meg ügyes kereskedők és mesteremberek nélkül. 
+    Belőlük kerül ki a városi tanács döntő hányada is, jóllehet akaratukat csak akkor tudják érvényesíteni, ha az egybevág a nemesség és a herceg érdekeivel. 
+    Ezen sokan úgy segítenek, hogy befolyásos pártfogókat keresnek a Garais lakói között. A bankházak és ékszerészcéhek vezetőinek sok ilyen lehetőségük akad, de ügyes politikával a nagyobb céhek mesterei is megtalálják a számításukat. 
+    Haonwell mezőgazdasági termékekből önellátó ugyan, de a távoli vidékek árui mindig megtalálják a maguk vevőit az ősi falak között, hála az ügyes kereskedőknek, akik külhonból jobbára kelméket, selymet, illatszereket, bőrt, csontot, érceket, vágómarhát, ereni búzát, bort, festőanyagokat hoznak, s üveggel, ötvösmunkával, borostyánnal, fegyverekkel és jószággal fizetnek értük. 
+    Egy város, ahol hatalmas összegek cserélnek gazdát, nem lehet mentes a tolvajoktól - nincs ez máshogy Haonwell esetében sem. Számos kétes hírű szervezet vert tanyát a falak között, s nem csak a Hanóba fészkelték be magukat: 
+    megtalálhatók - persze jóval csekélyebb számban - Synn Erian utcáin is. Aki idemerészkedik, jól teszi, ha szemmel tartja értékeit, esetleg testőröket fogad. 
+    Az elfek fontos szerepet töltenek be Haonwell kulturális életében. Számos színházuk működik a Synn Erian területén, s az is előfordul, hogy műértőknek bepillantást engednek énektudásukba. 
+    Gyakoriak a ligeteikben bemutatott táncjátékok, és a leghíresebb dalnokok vagy maguk is az ősi nép fiai, vagy a mesterük tartozott közéjük. 
+    A város más területein is szívesen látott vendégek, gyakran tűnnek fel nemesi házakban, de senki nem forul utánnuk, ha éppen Hano kerületeiben intézik ügyeiket.
+    Jogállásuk sajátos: kerületeiken kívül a város törvényei érvényesek rájuk, de minden Synn Erianban elkövetett vétkükért elf bíráik előtt felelnek, s ugyancsak ezek előtt a bíróságok előtt adnak számot tetteikről azok, akik a hercegség területén bárhol az elfek ellenére tettek. 
+    Noha a városon belül is számosan laknak, igazi városiaknak csak a félelfek számítanak: a nagyobb elf települések a végtelen erdőségekben rejtőznek. Aki igazi élőhelyükön akarja felkeresni őket, ide igyekszik, bár igazán szerencsésnek kell lennie, ha megadatik neki a találkozás: a hosszúéletűek nem kedvelik az idegeneket, azokat a fajtársaikat pedig, akik kődzsungelt választották, eltévelyedettnek, züllötnek tartják. 
+    Mindazonáltal nem hálátlanok: cserébe a nyugaloméramit Haonwell biztosít nekik, hozzájárulnak a hercegés határainak a védelméhez. Bár fegyveres harcba csak kivételes alkalmakkor keverednek, nyomolvasóik, futáraik tudnak mindenről, ami a környéken történi, s a hercegi tanácsot minden esetben friss hírekkel látják el. 
+    Fontos feladat hárul rájuk a pegazus- és unikornis-ménesek mellett: a három fajt állítólag egészen ősi szálak fűzik össze, amit bárki azonnal elhisz, aki látott már pegazusokkal vagy unikornisokkal játszó elfet. 
+    Mánesek majdnem minden nemesi család birtokában vannak, ám a hercegi família e tevékenységben is az élen jár. 
+    Haonwell lakói az ereni divatot követik, de a zöld különböző árnyalatai is kedveltek körükben. A nők gyakorta hordanak nadrágot, s számosan mímelik közülük az elfek látványos hajfonatait. 
+    A hecegség lakói, noha majd' mindenből behozatalra szorulnak, semmiben nem szenvednek hiányt. 
+    Az árak az ereniekhez igazodnak, vagyis magasabbak az Yneven általánosnál - ám ez csak azon haonwelliek számára nyilvánvaló, akiket kalandvágy netán felsőbb parancs szólít a nagyvilágba. 
+    Haonwellben harcosnak, gladiátornak és bárdnak tanulhat a jóravaló ember, ám köztudott, hogy a tolvajklánok is szorgosan folytatják az utánpoótlás nevelését. 
+    A közbiztonság ennek megfelelően sok kívánnivalót hagy maga után: vagyontárgyaira minden idelátogatónak ügyelnie kell, fegyveres rablásra, gyilkosságra azonban felettébb ritkán kerül sor. 
+    A haonwelliek pyarroni hitet vallanak: Arel, Alborne és Kyel kultusza a legelterjedtebb, ám - különösen az elfek és kevertvérűek lakta negyedekben - gyakoriak a kalahorák emlékhelyei is. 
 
 
     </body>
