--- a/mgussegdlet/app/src/main/assets/sirenar.html
+++ b/mgussegdlet/app/src/main/assets/sirenar.html
@@ -10,6 +10,36 @@
     <button onclick="location.href='vilag.html';" style="width: 100%; font-size: 14px; opacity: 0.6; padding: 8px; border-radius: 4px; border: 1px;">Világ</button>
     <h1 style="background-color: grey; text-align: center; border-radius: 4px;">Sirenar szövetség</h1>
 
-    A sirenar szövetségről infó kell!!!
+    Tysson-lar bukása után sok elf indult útnak Északra, hogy új hazát keressen. A tizenkét családból álló szövetség, a Kereskedők vezetésével a vándorok hosszú útjuk végén a köntinens nyugati partján leltek otthonra. 
+    A Rehiarnak, vagy Szemek földjének nevezett vidéket uraló óelf rehynnek befogadták, és a gyepűk mellett telepítették le őket. 
+    Céljaik mai napig változatlanok: megőrizni az elf vér tisztaságát és a Nép hagyományait, valamint szemmel tartani az Északon szunnyadó aquirfajzatokat. 
+    Rehiar területe a korok múlásával egyre kisebb lett, vezetői száma is megfogyatkozott. 
+    Csak a legkiválóbb óelfek maradnak itt, hogy mindig újjászületve vezessék és óvják népüket. 
+    Egyikük az Északi Szövetség Vörös Hadura, ily módon a Rehiar megfogyatkozott erdeiből újjáéledő állam -Sirenar - minden Zászlóháborúból kivette a részét. 
+    Íjászaiknak párja nincs északon, katonáik bátorsága messze földön híres. 
+    A csatamezők színtere az egyetlen hely, ahol a külvilág kapcsolatba kerülhet Sirenar elfeivel
+    Szövetségeseikkel szemben is zárkózottak, és sokakat taszít a belőlük áradó komor felsőbbrendűség. Az emberek és egyéb népek számára rejtélyes, távoli világ Sirenar jól őrzött rengetege.
+    Mendemondák százai szólnak arról, hogy miféle csodák avagy rémségek rejteznek a hatalmas erdőségek mélyén, ahol századok óta nem járt halandó. 
+    Számos város bújik meg a fák ágai közt, mind közül a legősibb Oilan. Ezek a városok még őrzik az egykorvolt dicsőség fényét, emlékeztetve az itt élőket a hagyományra, és Elveszett Istenükre. 
+    Emberi értelemben vett házakat nem találni itt, maguk az égig érő fák nyújtanak otthont az elfeknek. A természeti mágia eleven csodái ezek a városok, melyekről úgy tartják, ha ember akár egyszer is pillantást vet rájuk, örökre visszavágyik majd ide. 
+<br><br>
+    <h2>Államszervezet</h2><br>
+
+    Sirenart a rehynnek, vagyis a Hatok tanácsa irányítja. Ynev utolsó óelfjei ők, szavuk törvény az elfek számára.
+    <br><br>
+
+    <h2>Hétköznapi élet</h2><br>
+    A siranari elfek sokkalta hagyománytisztelőbbek, mint Déli fajtársaik. Legalábbis ők így hiszik. Vaskeménységgel őrzik évezredes kultúrájuk minden törvényét. Sirenar erdeje a béke hona, a jól őrzött békéé. 
+    Az itt élő elfek erősek és büszkék, nem engedik, hogy a hanyatlás szele kikezdje őket.
+    Sirenar minden lakója - nők és férfiak egyaránt - kiválóan bánik az újjal és a karddal. Csöndes elszigeteltségben élnek, úgy hiszik, hogy a "hamari népek" megronjták fajukat.
+    <br><br>
+    <h2>Törvények és közbiztonság</h2><br>
+
+    A törvények egyszerűek, de roppant szigorúak. Az az elf, aki önszántából akárcsak beszédbe elegyedik egy külvilágival, soha többé nem térhet vissza az országba. Ugyanez igaz azokra, akik a Zászlóháborúk alatt idegen földön küzdöttek Sirenarért.
+    Számukra az erdőbirodalom külső pereme nyújt otthont, ők Sirenar határának védelmezői. 
+<br><br>
+    <h2>Vallás</h2><br>
+
+    Sirenarban a kalahorák északi arcait tisztelik.
 </body>
 </html>
