--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -48,6 +48,7 @@
                         <option value="tarin">Tarin</option>
                         <option value="gianag">Gianag</option>
                         <option value="haonwell">Haonwell</option>
+                        <option value="sirenar">Sirenar Szövetség</option>
 
 
                     </select>
