--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -49,6 +49,7 @@
                         <option value="gianag">Gianag</option>
                         <option value="haonwell">Haonwell</option>
                         <option value="sirenar">Sirenar Szövetség</option>
+                        <option value="eren">Eren</option>
 
 
                     </select>
@@ -65,6 +66,7 @@
     <button class="mapbutton" id="doran" onclick="doran()"></button>
     <button class="mapbutton" id="gianag" onclick="gianag()"></button>
     <button class="mapbutton" id="haonwell" onclick="haonwell()"></button>
+    <button class="mapbutton" id="eren" onclick="eren()"></button>
 
 
     <img src="htmlmedia/ynev_poszter_lowres.jpg" alt="">
