--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -50,6 +50,7 @@
                         <option value="haonwell">Haonwell</option>
                         <option value="sirenar">Sirenar Szövetség</option>
                         <option value="eren">Eren</option>
+                        <option value="erigow">Erigow</option>
 
 
                     </select>
@@ -67,6 +68,7 @@
     <button class="mapbutton" id="gianag" onclick="gianag()"></button>
     <button class="mapbutton" id="haonwell" onclick="haonwell()"></button>
     <button class="mapbutton" id="eren" onclick="eren()"></button>
+    <button class="mapbutton" id="erigow" onclick="erigow()"></button>
 
 
     <img src="htmlmedia/ynev_poszter_lowres.jpg" alt="">
