--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -51,6 +51,7 @@
                         <option value="sirenar">Sirenar Szövetség</option>
                         <option value="eren">Eren</option>
                         <option value="erigow">Erigow</option>
+                        <option value="ilanor">Ilanor</option>
 
 
                     </select>
@@ -69,6 +70,7 @@
     <button class="mapbutton" id="haonwell" onclick="haonwell()"></button>
     <button class="mapbutton" id="eren" onclick="eren()"></button>
     <button class="mapbutton" id="erigow" onclick="erigow()"></button>
+    <button class="mapbutton" id="ilanor" onclick="ilanor()"></button>
 
 
     <img src="htmlmedia/ynev_poszter_lowres.jpg" alt="">
