--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -52,6 +52,7 @@
                         <option value="eren">Eren</option>
                         <option value="erigow">Erigow</option>
                         <option value="ilanor">Ilanor</option>
+                        <option value="tadlan">Tiadlan</option>
 
 
                     </select>
@@ -71,6 +72,7 @@
     <button class="mapbutton" id="eren" onclick="eren()"></button>
     <button class="mapbutton" id="erigow" onclick="erigow()"></button>
     <button class="mapbutton" id="ilanor" onclick="ilanor()"></button>
+    <button class="mapbutton" id="tiadlan" onclick="tiadlan()"></button>
 
 
     <img src="htmlmedia/ynev_poszter_lowres.jpg" alt="">
