--- a/mgussegdlet/app/src/main/assets/tiadlan.html
+++ b/mgussegdlet/app/src/main/assets/tiadlan.html
@@ -10,5 +10,20 @@
     <button onclick="location.href='vilag.html';" style="width: 100%; font-size: 14px; opacity: 0.6; padding: 8px; border-radius: 4px; border: 1px;">Világ</button>
     <h1 style="background-color: grey; text-align: center; border-radius: 4px;">Tiadlan</h1>
     
+    A Kyria bukását követő évezred roppant népvándorlásokat hozott, a legkülönösebb népcsoportok mégsem lóháton vagy szekéren érkeztek új hazájukba. 
+    A mágikus háborúk s a Káoszkor őrült varázslói által felelőtlenül nyitott térkapuk megbontották az anyagi világ egyensúlyát.
+    A Sinemos-tenger északi partvidékén, Grim-Tuil lapályán hatalmas Kapu nyílt, ami a hagyományok szerint közel másfél évszázadon keresztül kötötte össze Ynevet a keleti szigetvilággal.
+    A pyarron előtti harmadik században érkezett a tér e furcsa hasítékán át egy nép, amely különös szokásokat és még különösebb kultúrát hozott. 
+    Kevesen voltak, de erősek és jól szervezettek, így nem okozott nekik jelentősebb gondot az ott élő, barbárságba süllyedt nemzetségek kiszorítása. 
+    A jövevények lassanként elkeveredtek az őslakókkal, s hétszáz esztendővel érkezésük után létrehozták a maguk királyságát, melyet Tiadlannak neveztek el. 
+    A szigetvilágból származó hármas hatalmi rendszer máig fennmaradt, akárcsak az érkezők különös tudománya, a drágakőmágia.
+    A tiadlani kultúra sok külső elemet ötvöz, egyes vonásaiban dekadens, a Toronnal és Gro-Ugonnal vívott folytonos háborúk azonban megőrizték e nép harciasságát. 
+    Tiadlan lakói minden más népnél jobban kedvelik a városokat és a kényelmet - az Északi Szövetség nagy kereskedőházai majd' mind tiadlani érdekeltségűek. E kereskedőházak nevéhez fűződik a postakocsiszolgálat bevezetése, akárcsak a könyvnyomtatás elterjesztése. <br><br>
+    <h2>Államszervezet</h2><br>
+    Tiadlanban kasztrendszer létezik, bár szigorúságban meg sem közelíti a toroni rendszert, és a kasztok közötti átmenet is sokkal könnyebb.
+    Minden kaszt tagját megbecsülés övezi, ha rendesen elvégzi feladatát, bár igaz, hogy a harcosok kasztja jobban áll dicsőség dolgában. 
+    A négy kaszt a következő: harcosok kasztja, kereskedők kasztja, és a mesterek kasztja. A harcosok kasztjába a harc- és kardművészek, harcosok, katonák és lovagok tartoznak, a Dorcha vezetése alatt;
+    ő felel a hadseregekért és a közbiztonságért. A tudók kasztját a varázshasználók, papok, paplovagok alkotják, a Duin vezetése alatt; ő felel a hitéletért és egyházakért is. 
+
 </body>
 </html>
