--- a/mgussegdlet/app/src/main/assets/vilag.html
+++ b/mgussegdlet/app/src/main/assets/vilag.html
@@ -52,7 +52,7 @@
                         <option value="eren">Eren</option>
                         <option value="erigow">Erigow</option>
                         <option value="ilanor">Ilanor</option>
-                        <option value="tadlan">Tiadlan</option>
+                        <option value="tiadlan">Tiadlan</option>
 
 
                     </select>
