video zene megoldva index2-nél de a zene nem megy csak sima böngészővel

--- a/mgussegdlet/app/src/main/assets/tiadlan.html
+++ b/mgussegdlet/app/src/main/assets/tiadlan.html
@@ -24,6 +24,28 @@
     Minden kaszt tagját megbecsülés övezi, ha rendesen elvégzi feladatát, bár igaz, hogy a harcosok kasztja jobban áll dicsőség dolgában. 
     A négy kaszt a következő: harcosok kasztja, kereskedők kasztja, és a mesterek kasztja. A harcosok kasztjába a harc- és kardművészek, harcosok, katonák és lovagok tartoznak, a Dorcha vezetése alatt;
     ő felel a hadseregekért és a közbiztonságért. A tudók kasztját a varázshasználók, papok, paplovagok alkotják, a Duin vezetése alatt; ő felel a hitéletért és egyházakért is. 
-
+    A kereskedők kasztját nem egy ember vezeti: az öt legnagyobb kereskedőház tanácsa dönt a kereskedelmet illetve a gazdaságot befolyásoló kérdésekben. 
+    A mesterek kasztjának feje, ahová Tiadlan kéz és földművesei tartoznak, maga a király, a Deron; ő felel a kül és belpolitikáért valamint a törvényekért. Tiadlan vezetői minden jelentősebb kérdést a nagytancsában vitatnak meg. 
+    A tanácsnak nagyon sok tanácsadó testülete van, de a döntést a négy kaszt vezetői hozzák meg szavazással, amiben a Deron szavazata kettőt ér, a többi tagé egyet-egyet. A hivatalos nyelv az erv, de mindenki beszéli a Közöst, a kolostorokban pedig egyes niarei nyelvjárások is elsajátíthatók. <br><br>
+    <h2>Hétköznapi élet</h2><br>
+    Az ország lakói szigetvilági és niarei vérrel kevert vérű ervek, akiket -legalábbis az ő szempontjukból - épp e sajátságuk emel Észak más államainak lakói fölé. 
+    Tiadlanban az erigowi divatot követik, de gyakorta találni - elsősorban a nemesség tagjai közt - puritán, kizárólag fekete kelmékből készült öltözeteket is.
+    Kivételt csupán a Dorcha alattvalói képeznek, akik a Niaréból származó bő, a mozgást legkevésbé sem akadályozó vászonruhákat, olykor szoknyaszerű, takannak nevezett nadrágot hordanak. 
+    Az árszínvonal az északi átlagnak megfelelő; az ország, önellátó lévén, nem függ egyetlen kereskedelmi partnerétől sem. 
+    Tiadlanban a látogató a kultúra oly mértékű sokszínűségével találkozhat, amit északon szinte sehol máshol nem lehet látni.
+    Az utcákon a boltokat niarei írásjegyekkel jelölik, az ajtóban szigetvilági szelleműző szobrocskák lógnak. A vásárlók észak legváltozatosabb ruhakölteményeiben pompázhatnak, miközben egy szürkeruhás szerzetes a sarkon épp repedezett rizsestáljából szemezget, és ezeréves legendákkal riogatja a környék utcagyerekeit. <br><br>
+    <h2>Törvények és biztonság</h2><br>
+    A közbiztonság legfeljebb átlagosnak mondható.
+    A kiterjedt kereskedelem miatt állandóan jelenlévő tolvajklánok, és a toroni illetve ugoni határnál előforduló határvillongások sok környéket meglehetősen veszélyesség tesznek. Külön meg kell említenünk a harc- és kardművész rendeket. 
+    Ők a legtöbbször teljes jogi függetlenségben élnek az ország többi részétől, csak adót fizetnek, és a háborúkban kötelesek az országnak segíteni. 
+    Néha szabályos háborúkat vívnak egymás ellen, és azt beszélik, akad olyan rend is, amelyik a harcokban nem a vörös lobogók oldalán vesz részt. 
+    A törvények Tiadlanban meglehetősen szigorúak, bár egyes tájakon a törvénykezést leginkább a szokásjog szerint intézik, ami a legtöbb esetben kitiltást vagy halált jelent. 
+    A városokban humánusabb törvénykezés dívik. 
+    Itt a pénzbírság a bevett büntetési forma, bár ebből olyan mértékűeket osztanak ki, hogy a vádlott szinte minden esetben eladósodik, ezért kényszermunkára kötelezik. 
+    A gyilkosságért szinte minden esetben halál jár, kivéve, ha az tisztességes párviadalban következik be, ekkor nincs büntetés. <br><br>
+    <h2>Vallás</h2><br>
+    A tiadlaniak körében eddig mindössze három pyarroni isten kultusza volt megszokott - igaz, ezeket más néven is tisztelték. 
+    Arelt mint Villét, az úrnőt, Kyelt mint Velart az Urat, Kradot mint Nastarrt, a Tanítót. Az utóbbi száz évben azonban, elsősorban a király támogatásával Dreina egyháza is egyre népszerűbb Tiadlanban. 
+    A kialakult helyzet rivalizáláshoz vezetett Arel és Dreina egyháza közt; a hatalmi harc kimenetele még kétséges, mindenesetre eddig a vetéllkedő egyházak nem vetemedtek erőszak alkalmazására.
 </body>
 </html>
